--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Egypt -- History -- Fiction'
 - !lcsh 'German fiction -- Translations into Dutch'
+- GITenberg
 title: De nijlbruid
 url: http://www.gutenberg.org/ebooks/42935
